# CLRNET

./: .gitignore  CLRNET_VS_WP81_COMPARISON.md  CLRNet.proj  CMakeLists.txt  DEPLOYMENT_SUCCESS_REPORT.md  DOTNET_VERSION_ANALYSIS.md  Directory.Build.props  GIT_COMMIT_SUMMARY.md  IMPLEMENTATION_GUIDE.md  LICENSE  PHASE1-STATUS.md  QUICK_START.md  README.md  WP81_BUILD_READY_STATUS.md  WP81_COMPILATION_FIX_SUMMARY.md  WP81_MANIFEST_FIX_SUMMARY.md  build-sample-app.bat  build-wp81-sample.bat  build-wp81.ps1  demo-simple.ps1  demo.ps1  validate-wp81-project.bat
docs/: APP_LOCAL_OVERLAY_GUIDE.md  CLRNET_APP_INTEGRATION_PLAYBOOK.md  CLRNET_VS_WP81_OVERVIEW.md  PHASE2-ARCHITECTURE.md  PHASE2-COMPLETION-REPORT.md  PHASE3-ARCHITECTURE.md  RUNTIME_STATUS.md  SCRIPT_REFERENCE.md  TRACK-A-APP-LOCAL-BCL-OVERLAY.md  TRACK-B-USERSPACE-IL-ENGINE.md  TRACK-C-MODERN-CS-PIPELINE.md  VALIDATION_GUIDE.md  technical-specs.md
examples/ModernCSharpPipeline/: Directory.Build.props  ModernPipelineApp.csproj  Program.cs  appsettings.json
examples/SamplePlugin/: SamplePlugin.cs
examples/WP81Integration/: App.xaml  App.xaml.cs  CLRNetSampleApp.csproj  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
examples/overlay/: type-forward-map.txt
examples/scripts/: README.md  hello.clr
research/: modern-dotnet-runtime.md  wp81-clr-analysis.md
scripts/: health-check.ps1  quick-health-check.ps1  simple-check.ps1  verify-runtime-fixed.ps1  verify-runtime.ps1
src/CLRNetCore/: CLRNetCore.vcxproj
tests/: README.md  run-tests.ps1
tools/: README.md  deploy-config.json
(+93 files in other folders)
